--- a/login.html
+++ b/login.html
@@ -103,7 +103,7 @@
 
 
 	<!-- scripts -->
-	<script src="resources/detailAdmin/js/jquery-latest.js"></script>
+	<script src="resources/js/jquery-1.10.1.min.js"></script>
 	<script src="resources/detailAdmin/common.js"></script>
 	<script src="resources/detailAdmin/js/bootstrap.min.js"></script>
 	<script src="resources/detailAdmin/js/theme.js"></script>
@@ -111,7 +111,7 @@
 	<script type="text/javascript">
 		$(function () {
 
-			$("html").css("background-image", "url('resources/detailAdmin/img/bgs/7.jpg')");
+			$("body").css("background-image", "url('resources/detailAdmin/img/bgs/7.jpg')");
 			// bg switcher
 			var $btns = $(".bg-switch .bg");
 			$btns.click(function (e) {
