--- a/common/foot.html
+++ b/common/foot.html
@@ -1,90 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>我要查房</title>
-<meta name="description" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>我要查房</title>
+    <meta name="description" content="">
 
-<!-- core CSS -->
-<link href="./resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
-<link href="./resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
-<link href="./resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
-<link href="./resources/tpgd/css/main.css" rel="stylesheet">
-<link href="./resources/tpgd/css/responsive.css" rel="stylesheet">
-<link href="./resources/tpgd/css/owl.carousel.css" rel="stylesheet">
-<link href="./resources/tpgd/css/owl.theme.css" rel="stylesheet">
+    <!-- core CSS -->
+    <link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/main.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/responsive.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.theme.css" rel="stylesheet">
 
-<link href="./resources/layer/skin/layer.css" rel="stylesheet">
-<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <link href="../resources/layer/skin/layer.css" rel="stylesheet">
+    <link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 
 <body class="homepage">
 
-<header id="header">
-  <nav class="navbar navbar-inverse" role="banner">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
-      <div class="collapse navbar-collapse navbar-right">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html">主页</a></li>
-          <li class="active"><a href="about.html">联系我们</a></li>
-          <li><a href="house_info/list-table.html">有效房源</a></li>
-          <li><a href="portfolio.html">最新房源</a></li>
-          <li><a href="pricing.html">物业查询</a></li>
-          <li><a href="#personal">个人中心</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
 
 <footer id="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">Copyright &copy; 2016 我要查房.  </div>
-      <div class="col-sm-6">
-        <div class="follow-us"> <a class="fa fa-facebook social-icon" href="#"></a> <a class="fa fa-twitter social-icon" href="#"></a> <a class="fa fa-linkedin social-icon" href="#"></a> <a class="fa fa-google-plus social-icon" href="#"></a> </div>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">Copyright &copy; 2016 我要查房.</div>
+            <div class="col-sm-6">
+                <div class="follow-us"><a class="fa fa-facebook social-icon" href="#"></a> <a class="fa fa-twitter social-icon" href="#"></a>
+                    <a class="fa fa-linkedin social-icon" href="#"></a> <a class="fa fa-google-plus social-icon" href="#"></a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </footer>
-<script type="text/javascript" src="./resources/tpgd/js/jquery.js"></script>
-<script type="text/javascript" src="./resources/tpgd/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../resources/tpgd/js/jquery.js"></script>
+<script type="text/javascript" src="../resources/tpgd/js/bootstrap.min.js"></script>
 <!--<script type="text/javascript" src="./resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
-<script type="text/javascript" src="./resources/tpgd/js/jquery.isotope.min.js"></script>
-<script type="text/javascript" src="./resources/tpgd/js/owl.carousel.js"></script>
-<script type="text/javascript" src="./resources/tpgd/js/main.js"></script>
-<script type="text/javascript" src="./resources/layer/layer.js"></script>
+<script type="text/javascript" src="../resources/tpgd/js/jquery.isotope.min.js"></script>
+<script type="text/javascript" src="../resources/tpgd/js/owl.carousel.js"></script>
+<script type="text/javascript" src="../resources/tpgd/js/main.js"></script>
+<script type="text/javascript" src="../resources/layer/layer.js"></script>
 <script>
-  $('.recharge').on('click', function(){
-    layer.open({
-      type: 2,
-      title: '账户充值',
-      maxmin: true,
-      shadeClose: true, //点击遮罩关闭层
-      area : ['800px' , '520px'],
-      content: 'finance/recharge.html'
+    $('.recharge').on('click', function () {
+        layer.open({
+            type: 2,
+            title: '账户充值',
+            maxmin: true,
+            shadeClose: true, //点击遮罩关闭层
+            area: ['800px', '520px'],
+            content: 'finance/recharge.html'
+        });
     });
-  });
 
-  $('.rechargeAll').on('click', function(){
-    layer.open({
-      type: 2,
-      title: '充值记录',
-      maxmin: true,
-      shadeClose: true, //点击遮罩关闭层
-      area : ['800px' , '520px'],
-      content: 'finance/recharge_all.html'
+    $('.rechargeAll').on('click', function () {
+        layer.open({
+            type: 2,
+            title: '充值记录',
+            maxmin: true,
+            shadeClose: true, //点击遮罩关闭层
+            area: ['800px', '520px'],
+            content: 'finance/recharge_all.html'
+        });
     });
-  });
 
 
 </script>
