--- a/common/footOld.html
+++ b/common/footOld.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="../about.html" target="_top">关于我们&nbsp;&nbsp;</a></li>
             <li><a href="../help.html" target="_top">常见问题&nbsp;&nbsp;</a></li>
-            <li><a href="../register.html" target="_top">加入我们&nbsp;&nbsp;</a></li>
+            <li><a href="../registerOld.html" target="_top">加入我们&nbsp;&nbsp;</a></li>
         </ul>
           <div class="foot-icp">©2015 QuBay 沪ICP备15039209号</div>
       </div>
