--- a/common/head.html
+++ b/common/head.html
@@ -44,7 +44,7 @@
                     <li><a href="../portfolio.html" target="_top">最新房源</a></li>
                     <li><a href="../pricing.html" target="_top">物业查询</a></li>
                     <li><a href="../index.html#personal" target="_top">个人中心</a></li>
-                    <li><a href="login.html">登录/注册</a></li>
+                    <li><a href="../login.html" target="_top">登录/注册</a></li>
                 </ul>
             </div>
         </div>
