--- a/common/headOld.html
+++ b/common/headOld.html
@@ -45,7 +45,7 @@
     <div class="headerR">
       <div class="part1" style="display:none ">
         <span id="login_btn"><a href="../login.html" target="_top">登录</a></span>
-        <span id="register_btn"><a href="../register.html"  target="_top">注册</a></span>
+        <span id="register_btn"><a href="../registerOld.html" target="_top">注册</a></span>
       </div>
 
       <div class="part2" style="display:none ">
