--- a/login.html
+++ b/login.html
@@ -40,6 +40,13 @@
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Cache-Control" content="no-cache" />
 
+	<!-- scripts -->
+	<script src="resources/js/jquery-1.10.1.min.js"></script>
+	<script src="resources/js/common.js"></script>
+	<script src="resources/detailAdmin/js/bootstrap.min.js"></script>
+	<script src="resources/detailAdmin/js/theme.js"></script>
+	<script type="text/javascript" src="./resources/js/login.js"></script>
+	<script type="text/javascript" src="./resources/layer/layer.js"></script>
 </head>
 <body>
 
@@ -69,8 +76,7 @@
 
 
 		<div>
-			<form id="loginForm" action="login.jsp" method="post">
-				<input type="hidden" id="enPassword" name="enPassword" />
+			<form id="loginForm" action="" method="post">
 
 				<div class="row-fluid login-wrapper">
 					<a href="index.html">
@@ -82,19 +88,19 @@
 							<h6>登录</h6>
 							<input class="span12" type="text" placeholder="请输入用户名" id="username" name="username" maxlength="20" />
 
-							<input class="span12" type="password" placeholder="请输入密码" id="password" maxlength="20"/>
+							<input class="span12" type="password" placeholder="请输入密码" id="password"  name="password" maxlength="20"/>
 							<a href="#" class="forgot">忘记密码?</a>
 							<div class="remember">
-								<input id="remember-me" type="checkbox" />
-								<label for="remember-me">记住密码</label>
+								<input id="isRememberUsername" type="checkbox" />
+								<label for="isRememberUsername">记住密码</label>
 							</div>
-							<input class="btn-glow primary login" type="submit" class="loginButton" value="登录" />
+							<input class="btn-glow primary login loginButton" type="button"  id="loginButton" value="登录" />
 						</div>
 					</div>
 
 					<div class="span4 no-account">
 						<p>没有账号？</p>
-						<a href="signup.html">立即注册</a>
+						<a href="register.html">立即注册</a>
 					</div>
 				</div>
 
@@ -102,11 +108,6 @@
 		</div>
 
 
-	<!-- scripts -->
-	<script src="resources/js/jquery-1.10.1.min.js"></script>
-	<script src="resources/detailAdmin/common.js"></script>
-	<script src="resources/detailAdmin/js/bootstrap.min.js"></script>
-	<script src="resources/detailAdmin/js/theme.js"></script>
 	<!-- pre load bg imgs -->
 	<script type="text/javascript">
 		$(function () {
@@ -121,59 +122,6 @@
 				var bg = $(this).data("img");
 				$("html").css("background-image", "url('resources/detailAdmin/img/bgs/" + bg + "')");
 			});
-		});
-	</script>
-
-
-	<script type="text/javascript">
-		$().ready( function() {
-
-			var $loginForm = $("#loginForm");
-			var $enPassword = $("#enPassword");
-			var $username = $("#username");
-			var $password = $("#password");
-			var $captcha = $("#captcha");
-			var $captchaImage = $("#captchaImage");
-			var $isRememberUsername = $("#isRememberUsername");
-
-			// 记住用户名
-			if(getCookie("adminUsername") != null) {
-				$isRememberUsername.prop("checked", true);
-				$username.val(getCookie("adminUsername"));
-				$password.focus();
-			} else {
-				$isRememberUsername.prop("checked", false);
-				$username.focus();
-			}
-
-
-			// 表单验证、记住用户名
-			$loginForm.submit( function() {
-				if ($username.val() == "") {
-					alert("admin.login.usernameRequired");
-					return false;
-				}
-				if ($password.val() == "") {
-					alert("admin.login.passwordRequired");
-					return false;
-				}
-				if ($captcha.val() == "") {
-					alert( "admin.login.captchaRequired");
-					return false;
-				}
-
-				if ($isRememberUsername.prop("checked")) {
-					addCookie("adminUsername", $username.val(), {expires: 7 * 24 * 60 * 60});
-				} else {
-					removeCookie("adminUsername");
-				}
-
-				var rsaKey = new RSAKey();
-				rsaKey.setPublic(b64tohex("<%=modulus%>"), b64tohex("<%=exponent%>"));
-				var enPassword = hex2b64(rsaKey.encrypt($password.val()));
-				$enPassword.val(enPassword);
-			});
-
 		});
 	</script>
 
