--- a/register.html
+++ b/register.html
@@ -50,8 +50,8 @@
 </head>
 <body>
 
-<iframe name="header" id="header" src="./common/head.html" width="100%;" height="89px" frameborder="0" scrolling="no">
-</iframe>
+<!--<iframe name="header" id="header" src="./common/head.html" width="100%;" height="89px" frameborder="0" scrolling="no">-->
+<!--</iframe>-->
 
 		<div>
 			<form id="registerForm" action="" method="post">
