--- a/about.html
+++ b/about.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>我要查房 | 关于我们</title>
-<meta name="description" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>我要查房</title>
+  <meta name="description" content="">
 
-<!-- core CSS -->
-<link href="./resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
-<link href="./resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
-<link href="./resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
-<link href="./resources/tpgd/css/main.css" rel="stylesheet">
-<link href="./resources/tpgd/css/responsive.css" rel="stylesheet">
-<link href="./resources/tpgd/css/owl.carousel.css" rel="stylesheet">
-<link href="./resources/tpgd/css/owl.theme.css" rel="stylesheet">
-<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <!-- core CSS -->
+  <link href="./resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+  <link href="./resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
+  <link href="./resources/tpgd/css/main.css" rel="stylesheet">
+  <link href="./resources/tpgd/css/responsive.css" rel="stylesheet">
+  <link href="./resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+  <link href="./resources/tpgd/css/owl.theme.css" rel="stylesheet">
+
+  <link href="./resources/layer/skin/layer.css" rel="stylesheet">
+  <link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  <script src="./resources/js/jquery-1.10.1.min.js"></script>
+  <script src="./resources/js/common.js"></script>
+  <script src="./resources/js/common/head.js"></script>
+
+  <script type="text/javascript" src="./resources/tpgd/js/bootstrap.min.js"></script>
+  <!--<script type="text/javascript" src="./resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
+  <script type="text/javascript" src="./resources/tpgd/js/jquery.isotope.min.js"></script>
+  <script type="text/javascript" src="./resources/tpgd/js/owl.carousel.js"></script>
+  <script type="text/javascript" src="./resources/tpgd/js/main.js"></script>
+  <script type="text/javascript" src="./resources/layer/layer.js"></script>
+  <script type="text/javascript" src="./resources/js/index.js"></script>
 </head>
 
-<body>
-<iframe name="header" id="header" src="./common/head.html" width="100%;" frameborder="0" scrolling="no">
-</iframe>
+<body class="homepage">
+
+<div id="divID" style="width:100%; height: 74px;"></div>
+<script>
+  $("#divID").load("common/head.html");
+</script>
+
 <div id="inner-page">
   <div class="top-center">
     <h2>关于我们</h2>
