--- a/common/head.html
+++ b/common/head.html
@@ -1,26 +1,43 @@
-<html lang="en">
 <head>
+    <base id="basePath" href="">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我要查房</title>
     <meta name="description" content="">
 
-    <!-- core CSS -->
-    <link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
-    <link href="../resources/tpgd/css/main.css" rel="stylesheet">
-    <link href="../resources/tpgd/css/responsive.css" rel="stylesheet">
-    <link href="../resources/tpgd/css/owl.carousel.css" rel="stylesheet">
-    <link href="../resources/tpgd/css/owl.theme.css" rel="stylesheet">
 
-    <link href="../resources/layer/skin/layer.css" rel="stylesheet">
-    <!--<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>-->
+    <!-- core CSS -->
+    <link href="resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
+    <link href="resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+    <!--<link href="resources/tpgd/css/prettyPhoto.css" rel="stylesheet">-->
+    <link href="resources/tpgd/css/main.css" rel="stylesheet">
+    <link href="resources/tpgd/css/responsive.css" rel="stylesheet">
+    <link href="resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+    <link href="resources/tpgd/css/owl.theme.css" rel="stylesheet">
+
+    <link href="resources/layer/skin/layer.css" rel="stylesheet">
+    <link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+
+    <script src="resources/js/common.js"></script>
+    <script src="resources/js/common/head.js"></script>
+    <script src="resources/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="resources/tpgd/js/bootstrap.min.js"></script>
+    <!--<script type="text/javascript" src="resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
+    <script type="text/javascript" src="resources/tpgd/js/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="resources/tpgd/js/owl.carousel.js"></script>
+    <script type="text/javascript" src="resources/tpgd/js/main.js"></script>
+    <script type="text/javascript" src="resources/layer/layer.js"></script>
+
+    <script>
+
+    </script>
+
 </head>
 
 <body class="homepage">
@@ -29,22 +46,26 @@
     <nav class="navbar navbar-inverse" role="banner">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span> <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a>
-            </div>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="../index.html" target="_top">主页</a></li>
-                    <li><a href="../about.html" target="_top">联系我们</a></li>
-                    <li><a href="../house_info/list-table.html" target="_top">有效房源</a></li>
-                    <li><a href="../portfolio.html" target="_top">最新房源</a></li>
-                    <li><a href="../pricing.html" target="_top">物业查询</a></li>
-                    <li><a href="../index.html#personal" target="_top">个人中心</a></li>
-                    <li><a href="../login.html" target="_top">登录/注册</a></li>
+                    <li class="active"><a href="index.html">主页</a></li>
+                    <li ><a href="about.html">联系我们</a></li>
+                    <li><a href="house_info/list-table.html">有效房源</a></li>
+                    <li><a href="portfolio.html">最新房源</a></li>
+                    <li><a href="pricing.html">物业查询</a></li>
+                    <li><a href="index.html#personal">个人中心</a></li>
+                    <li>
+                        <div class="part1" style="display:none ">
+                            <a href="login.html" target="_top">登录/注册</a>
+                        </div>
+
+                        <div class="part2" style="display:none ">
+                            <span id="testId">欢迎您，</span><span class="user"></span>
+                            <span class="btn btn-warning exit">退出</span>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
