--- a/house_info/list-table.html
+++ b/house_info/list-table.html
@@ -1,21 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!--<base href="http://localhost/yfyk-html/">-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
+
+    <!-- core CSS -->
+    <!--<link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" type="text/css" href="../resources/bootstrap-3.3.5/css/bootstrap.min.css">
+    <link href="../resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/main.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/responsive.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+    <link href="../resources/tpgd/css/owl.theme.css" rel="stylesheet">
+
+    <link href="../resources/layer/skin/layer.css" rel="stylesheet">
+    <link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="../resources/js/jquery-1.10.1.min.js"></script>
+    <script src="../resources/js/common.js"></script>
+    <script src="../resources/js/common/head.js"></script>
+
+    <script type="text/javascript" src="../resources/tpgd/js/bootstrap.min.js"></script>
+    <!--<script type="text/javascript" src="../resources/tpgd/js/jquery.prettyPhoto.js"></script>-->
+    <script type="text/javascript" src="../resources/tpgd/js/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="../resources/tpgd/js/owl.carousel.js"></script>
+    <script type="text/javascript" src="../resources/tpgd/js/main.js"></script>
+    <script type="text/javascript" src="../resources/layer/layer.js"></script>
     <link rel="stylesheet" type="text/css" href="../resources/css/house_info/list.css"/>
-    <link rel="stylesheet" type="text/css" href="../resources/css/global.css"/>
-    <link rel="stylesheet" type="text/css" href="../resources/css/clear.css"/>
+
     <link rel="stylesheet" type="text/css" href="../resources/dataTables/media/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
           href="../resources/dataTables/extensions/FixedHeader/css/fixedHeader.dataTables.css">
-    <link rel="stylesheet" type="text/css" href="../resources/bootstrap-3.3.5/css/bootstrap.min.css">
+
+
+
 
     <script type="text/javascript" src="../resources/js/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="../resources/js/common.js"></script>
+    <script type="text/javascript" src="../resources/layer/layer.js"></script>
     <script type="text/javascript" src="../resources/js/jquery.lSelect.js"></script>
 
-    <link href="../resources/css/date_css/date.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript"
             src="../resources/dataTables/extensions/FixedHeader/js/dataTables.fixedHeader.min.js"></script>
@@ -24,10 +55,35 @@
 </head>
 <body>
 
-<div style="width:100%; height:137px;">
-    <iframe src="../common/head.html" width="100%;" height="137px;" frameborder="0" scrolling="no">
-    </iframe>
-</div>
+<header id="header">
+    <nav class="navbar navbar-inverse" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <a class="navbar-brand" href="../index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
+            <div class="collapse navbar-collapse navbar-right">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="../index.html">主页</a></li>
+                    <li ><a href="../about.html">联系我们</a></li>
+                    <li><a href="../house_info/list-table.html">有效房源</a></li>
+                    <li><a href="../portfolio.html">最新房源</a></li>
+                    <li><a href="../pricing.html">物业查询</a></li>
+                    <li><a href="../index.html#personal">个人中心</a></li>
+                    <li>
+                        <div class="part1" style="display:none ">
+                            <a href="../login.html" target="_top">登录/注册</a>
+                        </div>
+
+                        <div class="part2" style="display:none ">
+                            <span id="testId">欢迎您，</span><span class="user"></span>
+                            <span class="btn btn-warning exit">退出</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 <div class="main">
 
     <div class="main_R">
