--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- bootstrap -->
-	<link href="resources/detailAdmin/css/bootstrap/bootstrap.css" rel="stylesheet" />
+	<link href="./resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
+	<!--<link href="resources/detailAdmin/css/bootstrap/bootstrap.css" rel="stylesheet" />-->
 	<link href="resources/detailAdmin/css/bootstrap/bootstrap-responsive.css" rel="stylesheet" />
 	<link href="resources/detailAdmin/css/bootstrap/bootstrap-overrides.css" type="text/css" rel="stylesheet" />
 
@@ -45,13 +46,50 @@
 	<script src="resources/js/common.js"></script>
 	<script src="resources/detailAdmin/js/bootstrap.min.js"></script>
 	<script src="resources/detailAdmin/js/theme.js"></script>
-	<script type="text/javascript" src="./resources/js/login.js"></script>
-	<script type="text/javascript" src="./resources/layer/layer.js"></script>
+	<script type="text/javascript" src="resources/layer/layer.js"></script>
+	<script type="text/javascript" src="resources/js/login.js"></script>
+	<style>
+		.navbar-inverse .navbar-nav > li a{
+			height:35px;
+		}
+	</style>
+
 </head>
 <body>
 
-<iframe name="header" id="header" src="./common/head.html" width="100%;" height="89px" frameborder="0" scrolling="no">
-</iframe>
+<div id="divID" style="width:100%; "></div>
+<!--<script>-->
+	<!--$("#divID").load("common/head.html");-->
+<!--</script>-->
+<!--<header id="header">-->
+	<!--<nav class="navbar navbar-inverse" role="banner">-->
+		<!--<div class="container">-->
+			<!--<div class="navbar-header">-->
+				<!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>-->
+				<!--<a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>-->
+			<!--<div class="collapse navbar-collapse navbar-right">-->
+				<!--<ul class="nav navbar-nav">-->
+					<!--<li class="active"><a href="index.html">主页</a></li>-->
+					<!--<li ><a href="about.html">联系我们</a></li>-->
+					<!--<li><a href="house_info/list-table.html">有效房源</a></li>-->
+					<!--<li><a href="portfolio.html">最新房源</a></li>-->
+					<!--<li><a href="pricing.html">物业查询</a></li>-->
+					<!--<li><a href="#personal">个人中心</a></li>-->
+					<!--<li>-->
+						<!--<div class="part1" style="display:none ">-->
+							<!--<a href="./login.html" target="_top">登录/注册</a>-->
+						<!--</div>-->
+
+						<!--<div class="part2" style="display:none ">-->
+							<!--<span id="testId">欢迎您，</span><span class="user"></span>-->
+							<!--<span class="btn btn-warning exit">退出</span>-->
+						<!--</div>-->
+					<!--</li>-->
+				<!--</ul>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</nav>-->
+<!--</header>-->
 
 	<!-- background switcher -->
 	<!--<div class="bg-switch visible-desktop">-->
