--- a/register.html
+++ b/register.html
@@ -66,6 +66,8 @@
 							<h6>注册</h6>
 							<input class="span12" type="text" placeholder="请输入用户名" id="username" name="username" maxlength="20" />
 
+							<input class="span12" type="text" placeholder="请输入手机号码" id="mobile" name="username" maxlength="11" />
+
 							<input class="span12" type="password" placeholder="请输入密码" id="password" name="password" maxlength="20"/>
 
 							<input class="span12" type="password" placeholder="请再次输入密码" id="passwordConfirm" maxlength="20"/>
