--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
   <div class="container">
     <div class="about-us">
       <div class="row">
+
         <div class="col-md-4 col-sm-6"><img src="./resources/tpgd/images/about.jpg" class="img-responsive" alt=""/> </div>
         <div class="col-md-4 col-sm-6">
           <h3>我们的愿景</h3>
@@ -141,12 +142,13 @@
       </div>
     </div>
   </div>
+
 </section>
 
 <footer id="footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">Copyright &copy; 2015 我要查房. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></div>
+      <div class="col-sm-6">Copyright &copy; 2016 我要查房.  </div>
       <div class="col-sm-6">
         <div class="follow-us"> <a class="fa fa-facebook social-icon" href="#"></a> <a class="fa fa-twitter social-icon" href="#"></a> <a class="fa fa-linkedin social-icon" href="#"></a> <a class="fa fa-google-plus social-icon" href="#"></a> </div>
       </div>
