--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
   <script type="text/javascript" src="./resources/tpgd/js/main.js"></script>
   <script type="text/javascript" src="./resources/layer/layer.js"></script>
   <script type="text/javascript" src="./resources/js/index.js"></script>
+  <!--<base href="/">-->
 </head>
 
 <body class="homepage">
