--- a/resources/dataTables/extensions/FixedColumns/examples/initialisation/simple.html
+++ b/resources/dataTables/extensions/FixedColumns/examples/initialisation/simple.html
@@ -14,7 +14,7 @@
 	/* Ensure that the demo table scrolls */
 	th, td { white-space: nowrap; }
 	div.dataTables_wrapper {
-		width: 800px;
+		min-width: 80%;
 		margin: 0 auto;
 	}
 
